# ocr-fastapi

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  TUTORIAL-DEPLOY.md  alembic.ini  docker-compose.yml  env.example  nginx.conf  ocr_app.db  pyproject.toml
.github/workflows/: deploy.yml  validate.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
alembic/: env.py
alembic/versions/: 5b5de0f22ce3_initial_migration.py
app/: main.py
app/api/: auth.py  errors.py  schemas.py
app/core/: config.py  logging.py
app/db/: database.py
app/middleware/: request_id.py
docker/: Dockerfile
docs/: README.md  al2023-setup.md  amplify-integration.md  api.md  app-backend.md  architecture.md  checklists.md  configuration.md  deployment-ci-cd.md  docker.md  gpu-verify.md  health.md  infra-apply.md  infra-asg-gpu.md  infra-ecr.md  infra-ecs-cluster.md  infra-remote-state.md  infra-terraform.md  infra-vpc.md  logging.md  models.md  monitoring.md  ocr-pipeline.md  open-questions.md  performance.md  security-threat-model.md  security.md  tasks-validation.md  testing.md  troubleshooting.md
infra/: README.md
scripts/: gpu_verify.sh  validate_tasks.py
tasks/: 1-infra-gpu-cluster.md  10-docker-local-gpu.md  11-ecs-deploy-cicd.md  12-monitoring-amplify-e2e.md  13-gpu-paddle-verify.md  14-pp-structure-chatocr.md  2-paddlepaddle-install.md  3-paddleocr-install.md  4-fastapi-backend.md  5-ocr-pipeline.md  6-fallback-and-performance.md  7-auth-and-cors.md  8-healthcheck.md  9-logging-observability.md  README.md  tasks.json
tests/: test_app.py
(+20 files in other folders)
